# uas

./: .env.sample  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: 01-getting-started.md  02-configuration-providers.md  03-core-components.md  04-tools.md  05-skills.md  06-hooks.md  07-agents.md  08-memory.md  09-api-reference.md  10-migration-guide.md  MIGRATION_PLAN.md  README.md
examples/: README.md
examples/cli-tool/: README.md
examples/desktop-ide/: README.md
examples/docker/: Dockerfile.agent  Dockerfile.api  Dockerfile.ui  README.md  api_requirements.txt  docker-compose.dev.yml  docker-compose.yml
examples/docker/api/: __init__.py  config.py  config_loader.py  container_manager.py  main.py  models.py  session_manager.py
examples/docker/api/routes/: __init__.py  agents.py  chat.py  configs.py  files.py
examples/docker/container/: agent_server.py  requirements.txt
examples/docker/ui/: package-lock.json  package.json
examples/docker/ui/app/: globals.css  layout.tsx  page.tsx
examples/docker/ui/components/: FileUploadModal.tsx  SkillExecutionPanel.tsx  ThinkingCard.tsx  (+1 more)
examples/programmatic/advanced/: budget_limits.py  partial_messages.py  setting_sources.py  stderr_callback.py  system_prompts.py
examples/programmatic/agents/: 01_basic_agent.py  02_agents_example.py  03_filesystem_agents.py
examples/programmatic/hooks/: hooks_example.py
examples/programmatic/memory/: memory_example.py
examples/programmatic/presets/: creative-developer.yaml  developer-assistant.yaml  virtual-assistant.yaml
examples/programmatic/providers/: provider_switching.py
examples/programmatic/quickstart/: 01_basic_query.py  02_streaming.py  03_options_demo.py  04_interactive_chat.py  05_streaming_modes.py
examples/programmatic/showcase/: coding_agent.py  preset_loader.py  ultimate_assistant.py  virtual_assistant.py
examples/programmatic/skills/: 01_skills_basics.py  02_skills_example.py
examples/programmatic/tools/: 01_custom_tools.py  02_builtin_tools.py  03_tool_permissions.py  04_tools_option.py  05_memory_tool.py
examples/vscode-extension/: README.md
examples/web-backend/: README.md
presets/: code-assistant.yaml  data-analysis.yaml  fullstack-team.yaml  research-agent.yaml  virtual-assistant.yaml
src/universal_agent_sdk/: __init__.py  client.py  config.py  errors.py  preset.py  query.py  types.py
src/universal_agent_sdk/agents/: __init__.py  base.py  registry.py  subagent.py
src/universal_agent_sdk/memory/: __init__.py  base.py  conversation.py  persistent.py
src/universal_agent_sdk/providers/: __init__.py  base.py  claude.py  openai.py
src/universal_agent_sdk/skills/: __init__.py  base.py  loader.py  registry.py  tool.py
src/universal_agent_sdk/tools/: __init__.py  base.py  memory.py  registry.py
tests/: __init__.py  conftest.py  test_errors.py  test_imports.py  test_skills.py  test_types.py
(+18 files in other folders)
